--- a/manual/emacspeak.html
+++ b/manual/emacspeak.html
@@ -416,7 +416,6 @@ p               emacspeak-wizards-pdf-open
 s               emacspeak-wizards-shell
 t               twit
 u               list-unicode-display
-v               emacspeak-muggles-vuiet/body
 w               emacspeak-wizards-noaa-weather
 y               yas-expand
 
@@ -446,14 +445,13 @@ j               ido-imenu-anywhere
 l               emacspeak-m-player-locate-media
 m               emacspeak-wizards-view-buffers-filtered-by-this-mode
 n               emacspeak-wizards-google-news
-o               emacspeak-muggles-outliner/body
+o               org-switchb
 p               proced
 q               emacspeak-wizards-iex-show-quote
 r               soundscape-restart
 s               soundscape
 t               soundscape-toggle
 u               soundscape-update-mood
-v               emacspeak-muggles-view/body
 w               define-word
 
 .
@@ -464,14 +462,12 @@ key             binding
 
 SPC             emacspeak-eww-smart-tabs
 ,               emacspeak-eldoc-speak-doc
-/               emacspeak-origami/body
 a               emacspeak-feeds-atom-display
 b               sox-binaural
 c               emacspeak-wizards-view-buffers-filtered-by-this-mode
 d               sdcv-search-input
 e               eww
 f               emacspeak-wizards-find-file-as-root
-h               emacspeak-muggles-hideshow/body
 i               emacspeak-wizards-iheart
 l               eww-open-file
 m               magit-status
