--- a/manual/emacspeak_002dmuggles.html
+++ b/manual/emacspeak_002dmuggles.html
@@ -179,12 +179,7 @@ The body can be accessed via ‘emacspeak-muggles-brightness/body’.
     <dt id="index-emacspeak_002dmuggles_002dhideshow_002fbody">
     Command: <strong>emacspeak-muggles-hideshow/body</strong></dt>
     <dd>
-      <dl compact="compact">
-        <dt><kbd>C-, h</kbd></dt>
-        <dd><span id="index-C_002d_002c-h"></span></dd>
-        <dt><kbd>C-x @ a h</kbd></dt>
-        <dd><span id="index-C_002dx-_0040-a-h"></span></dd>
-      </dl><span id=
+      <span id=
       "index-emacspeak_002dmuggles_002dhideshow_002fbody-1"></span>
       <div class="format">
         <pre class=
@@ -522,14 +517,7 @@ The body can be accessed via ‘emacspeak-muggles-org-table/body’.
     <dt id="index-emacspeak_002dmuggles_002doutliner_002fbody">
     Command: <strong>emacspeak-muggles-outliner/body</strong></dt>
     <dd>
-      <dl compact="compact">
-        <dt><kbd>C-. o</kbd></dt>
-        <dd><span id="index-C_002d_002e-o"></span></dd>
-        <dt><kbd>C-' o</kbd></dt>
-        <dd><span id="index-C_002d_0027-o"></span></dd>
-        <dt><kbd>C-x @ s o</kbd></dt>
-        <dd><span id="index-C_002dx-_0040-s-o"></span></dd>
-      </dl><span id=
+      <span id=
       "index-emacspeak_002dmuggles_002doutliner_002fbody-1"></span>
       <div class="format">
         <pre class=
@@ -661,14 +649,7 @@ The body can be accessed via ‘emacspeak-muggles-toggle-option/body’.
     <dt id="index-emacspeak_002dmuggles_002dview_002fbody">Command:
     <strong>emacspeak-muggles-view/body</strong></dt>
     <dd>
-      <dl compact="compact">
-        <dt><kbd>C-. v</kbd></dt>
-        <dd><span id="index-C_002d_002e-v"></span></dd>
-        <dt><kbd>C-' v</kbd></dt>
-        <dd><span id="index-C_002d_0027-v"></span></dd>
-        <dt><kbd>C-x @ s v</kbd></dt>
-        <dd><span id="index-C_002dx-_0040-s-v"></span></dd>
-      </dl><span id=
+      <span id=
       "index-emacspeak_002dmuggles_002dview_002fbody-1"></span>
       <div class="format">
         <pre class=
@@ -734,12 +715,7 @@ The body can be accessed via ‘emacspeak-muggles-view/body’.
     <dt id="index-emacspeak_002dmuggles_002dvuiet_002fbody">
     Command: <strong>emacspeak-muggles-vuiet/body</strong></dt>
     <dd>
-      <dl compact="compact">
-        <dt><kbd>C-; v</kbd></dt>
-        <dd><span id="index-C_002d_003b-v"></span></dd>
-        <dt><kbd>C-x @ h v</kbd></dt>
-        <dd><span id="index-C_002dx-_0040-h-v"></span></dd>
-      </dl><span id=
+      <span id=
       "index-emacspeak_002dmuggles_002dvuiet_002fbody-1"></span>
       <div class="format">
         <pre class=
@@ -805,13 +781,7 @@ The body can be accessed via ‘emacspeak-muggles-yank-pop/body’.
     <dt id="index-emacspeak_002dorigami_002fbody">Command:
     <strong>emacspeak-origami/body</strong></dt>
     <dd>
-      <dl compact="compact">
-        <dt><kbd>C-, /</kbd></dt>
-        <dd><span id="index-C_002d_002c-_002f"></span></dd>
-        <dt><kbd>C-x @ a /</kbd></dt>
-        <dd><span id="index-C_002dx-_0040-a-_002f"></span></dd>
-      </dl><span id=
-      "index-emacspeak_002dorigami_002fbody-1"></span>
+      <span id="index-emacspeak_002dorigami_002fbody-1"></span>
       <div class="format">
         <pre class=
         "format">Call the body in the "emacspeak-origami" hydra.
