--- a/manual/Key-Index.html
+++ b/manual/Key-Index.html
@@ -1408,15 +1408,6 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "voice_002dsetup.html#index-_003cfn_003e-d-C_002dv"><code>&lt;fn&gt;
-      d C-v</code></a>:</td>
-      <td>&nbsp;</td>
-      <td valign="top"><a href=
-      "voice_002dsetup.html">voice-setup</a></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td valign="top"><a href=
       "dtk_002dspeak.html#index-_003cfn_003e-d-d"><code>&lt;fn&gt;
       d d</code></a>:</td>
       <td>&nbsp;</td>
@@ -1575,6 +1566,15 @@
       <td>&nbsp;</td>
       <td valign="top"><a href=
       "dtk_002dspeak.html">dtk-speak</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
+      "voice_002dsetup.html#index-_003cfn_003e-d-v"><code>&lt;fn&gt;
+      d v</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "voice_002dsetup.html">voice-setup</a></td>
     </tr>
     <tr>
       <td></td>
@@ -4974,15 +4974,6 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "voice_002dsetup.html#index-C_002de-d-C_002dv"><code>C-e d
-      C-v</code></a>:</td>
-      <td>&nbsp;</td>
-      <td valign="top"><a href=
-      "voice_002dsetup.html">voice-setup</a></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td valign="top"><a href=
       "Miscellaneous.html#index-C_002de-d-d"><code>C-e d
       d</code></a>:</td>
       <td>&nbsp;</td>
@@ -5267,6 +5258,15 @@
       <td>&nbsp;</td>
       <td valign="top"><a href=
       "Miscellaneous.html">Miscellaneous</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
+      "voice_002dsetup.html#index-C_002de-d-v"><code>C-e d
+      v</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "voice_002dsetup.html">voice-setup</a></td>
     </tr>
     <tr>
       <td></td>
