--- a/manual/voice_002dsetup.html
+++ b/manual/voice_002dsetup.html
@@ -104,10 +104,10 @@
     arg)</em></dt>
     <dd>
       <dl compact="compact">
-        <dt><kbd>C-e d C-v</kbd></dt>
-        <dd><span id="index-C_002de-d-C_002dv"></span></dd>
-        <dt><kbd>&lt;fn&gt; d C-v</kbd></dt>
-        <dd><span id="index-_003cfn_003e-d-C_002dv"></span></dd>
+        <dt><kbd>C-e d v</kbd></dt>
+        <dd><span id="index-C_002de-d-v"></span></dd>
+        <dt><kbd>&lt;fn&gt; d v</kbd></dt>
+        <dd><span id="index-_003cfn_003e-d-v"></span></dd>
       </dl><span id="index-voice_002dlock_002dmode-1"></span>
       <div class="format">
         <pre class="format">Toggle voice lock mode.
