--- a/manual/Key-Index.html
+++ b/manual/Key-Index.html
@@ -2887,6 +2887,15 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
+      "emacspeak_002dmuggles.html#index-C_002d_0027-o"><code>C-'
+      o</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dmuggles.html">emacspeak-muggles</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
       "emacspeak_002dwizards.html#index-C_002d_0027-q"><code>C-'
       q</code></a>:</td>
       <td>&nbsp;</td>
@@ -2959,11 +2968,29 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
+      "emacspeak_002dmuggles.html#index-C_002d_0027-v"><code>C-'
+      v</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dmuggles.html">emacspeak-muggles</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
       "emacspeak_002dadvice.html#index-C_002d_002c-_002c"><code>C-,
       ,</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href=
       "emacspeak_002dadvice.html">emacspeak-advice</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
+      "emacspeak_002dmuggles.html#index-C_002d_002c-_002f"><code>C-,
+      /</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dmuggles.html">emacspeak-muggles</a></td>
     </tr>
     <tr>
       <td></td>
@@ -2999,6 +3026,15 @@
       <td>&nbsp;</td>
       <td valign="top"><a href=
       "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
+      "emacspeak_002dmuggles.html#index-C_002d_002c-h"><code>C-,
+      h</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dmuggles.html">emacspeak-muggles</a></td>
     </tr>
     <tr>
       <td></td>
@@ -3192,6 +3228,15 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
+      "emacspeak_002dmuggles.html#index-C_002d_002e-o"><code>C-.
+      o</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dmuggles.html">emacspeak-muggles</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
       "emacspeak_002dwizards.html#index-C_002d_002e-q"><code>C-.
       q</code></a>:</td>
       <td>&nbsp;</td>
@@ -3260,6 +3305,15 @@
       <td>&nbsp;</td>
       <td valign="top"><a href=
       "soundscape.html">soundscape</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
+      "emacspeak_002dmuggles.html#index-C_002d_002e-v"><code>C-.
+      v</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dmuggles.html">emacspeak-muggles</a></td>
     </tr>
     <tr>
       <td></td>
@@ -3393,6 +3447,15 @@
       <td>&nbsp;</td>
       <td valign="top"><a href=
       "emacspeak_002dwebspace.html">emacspeak-webspace</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
+      "emacspeak_002dmuggles.html#index-C_002d_003b-v"><code>C-;
+      v</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dmuggles.html">emacspeak-muggles</a></td>
     </tr>
     <tr>
       <td></td>
@@ -6628,6 +6691,15 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
+      "emacspeak_002dmuggles.html#index-C_002dx-_0040-a-_002f"><code>
+      C-x @ a /</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dmuggles.html">emacspeak-muggles</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
       "emacspeak_002dfeeds.html#index-C_002dx-_0040-a-a"><code>C-x
       @ a a</code></a>:</td>
       <td>&nbsp;</td>
@@ -6659,6 +6731,15 @@
       <td>&nbsp;</td>
       <td valign="top"><a href=
       "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
+      "emacspeak_002dmuggles.html#index-C_002dx-_0040-a-h"><code>C-x
+      @ a h</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dmuggles.html">emacspeak-muggles</a></td>
     </tr>
     <tr>
       <td></td>
@@ -6896,6 +6977,15 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
+      "emacspeak_002dmuggles.html#index-C_002dx-_0040-h-v"><code>C-x
+      @ h v</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dmuggles.html">emacspeak-muggles</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
       "emacspeak_002dwizards.html#index-C_002dx-_0040-h-w"><code>C-x
       @ h w</code></a>:</td>
       <td>&nbsp;</td>
@@ -6995,6 +7085,15 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
+      "emacspeak_002dmuggles.html#index-C_002dx-_0040-s-o"><code>C-x
+      @ s o</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dmuggles.html">emacspeak-muggles</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
       "emacspeak_002dwizards.html#index-C_002dx-_0040-s-q"><code>C-x
       @ s q</code></a>:</td>
       <td>&nbsp;</td>
@@ -7063,6 +7162,15 @@
       <td>&nbsp;</td>
       <td valign="top"><a href=
       "soundscape.html">soundscape</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
+      "emacspeak_002dmuggles.html#index-C_002dx-_0040-s-v"><code>C-x
+      @ s v</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dmuggles.html">emacspeak-muggles</a></td>
     </tr>
     <tr>
       <td></td>
