--- a/manual/emacspeak.html
+++ b/manual/emacspeak.html
@@ -415,6 +415,7 @@ p               emacspeak-wizards-pdf-open
 s               emacspeak-wizards-shell
 t               twit
 u               list-unicode-display
+v               emacspeak-muggles-vuiet/body
 w               emacspeak-wizards-noaa-weather
 y               yas-expand
 
@@ -444,13 +445,14 @@ j               ido-imenu-anywhere
 l               emacspeak-m-player-locate-media
 m               emacspeak-wizards-view-buffers-filtered-by-this-mode
 n               emacspeak-wizards-google-news
-o               org-switchb
+o               emacspeak-muggles-outliner/body
 p               proced
 q               emacspeak-wizards-iex-show-quote
 r               soundscape-restart
 s               soundscape
 t               soundscape-toggle
 u               soundscape-update-mood
+v               emacspeak-muggles-view/body
 w               define-word
 
 .
@@ -461,12 +463,14 @@ key             binding
 
 SPC             emacspeak-eww-smart-tabs
 ,               emacspeak-eldoc-speak-doc
+/               emacspeak-origami/body
 a               emacspeak-feeds-atom-display
 b               sox-binaural
 c               emacspeak-wizards-view-buffers-filtered-by-this-mode
 d               sdcv-search-input
 e               eww
 f               emacspeak-wizards-find-file-as-root
+h               emacspeak-muggles-hideshow/body
 i               emacspeak-wizards-iheart
 l               eww-open-file
 m               magit-status
@@ -509,20 +513,8 @@ commands and options for details.
 </pre>
       </div>
     </dd>
-  </dl><span id="emacspeak_002dinfo-1"></span>
-  <h4 class="subsubsection">12.9.1.3 emacspeak-info</h4>
-  <dl>
-    <dt id="index-emacspeak_002dinfo">Command:
-    <strong>emacspeak-info</strong></dt>
-    <dd>
-      <span id="index-emacspeak_002dinfo-1"></span>
-      <div class="format">
-        <pre class="format">Open Emacspeak Info Manual.
-</pre>
-      </div>
-    </dd>
   </dl><span id="emacspeak_002dsubmit_002dbug"></span>
-  <h4 class="subsubsection">12.9.1.4 emacspeak-submit-bug</h4>
+  <h4 class="subsubsection">12.9.1.3 emacspeak-submit-bug</h4>
   <dl>
     <dt id="index-emacspeak_002dsubmit_002dbug">Command:
     <strong>emacspeak-submit-bug</strong></dt>
