--- a/manual/emacspeak_002dreftex.html
+++ b/manual/emacspeak_002dreftex.html
@@ -25,8 +25,8 @@
   "Emacspeak Commands And Options" />
   <link href="emacspeak_002drelated.html" rel="next" title=
   "emacspeak-related" />
-  <link href="emacspeak_002dredefine.html" rel="prev" title=
-  "emacspeak-redefine" />
+  <link href="emacspeak_002dre_002dbuilder.html" rel="prev" title=
+  "emacspeak-re-builder" />
   <style type="text/css">
   /*<![CDATA[*/
   <!--
@@ -55,8 +55,8 @@
   <div class="header">
     <p>Next: <a href="emacspeak_002drelated.html" accesskey="n"
     rel="next">emacspeak-related</a>, Previous: <a href=
-    "emacspeak_002dredefine.html" accesskey="p" rel=
-    "prev">emacspeak-redefine</a>, Up: <a href=
+    "emacspeak_002dre_002dbuilder.html" accesskey="p" rel=
+    "prev">emacspeak-re-builder</a>, Up: <a href=
     "Emacspeak-Commands-And-Options.html" accesskey="u" rel=
     "up">Emacspeak Commands And Options</a> &nbsp; [<a href=
     "index.html#SEC_Contents" title="Table of contents" rel=
@@ -65,7 +65,7 @@
   </div>
   <hr />
   <span id="emacspeak_002dreftex-1"></span>
-  <h3 class="section">12.166 emacspeak-reftex</h3>
+  <h3 class="section">12.165 emacspeak-reftex</h3>
   <p>This module speech-enables refteex – reftex is a minor mode
   that makes navigation of TeX documents possible via a table of
   contents buffer.</p>
