--- a/manual/Miscellaneous.html
+++ b/manual/Miscellaneous.html
@@ -162,12 +162,12 @@
       <p><code>emacspeak-dial-dtk</code></p>
       <p>Prompt for and dial a phone NUMBER with the
       Dectalk.</p><span id=
-      "index-emacspeak_002ddtk_002dspeak_002dversion"></span>
-      <span id="index-C_002de-d-cap-V"></span>
+      "index-tts_002dspeak_002dversion"></span> <span id=
+      "index-C_002de-d-cap-V"></span>
     </dd>
     <dt><kbd>C-e d cap V</kbd></dt>
     <dd>
-      <p><code>emacspeak-dtk-speak-version</code></p>
+      <p><code>tts-speak-version</code></p>
       <p>Use this to find out which version of the
       <acronym>TTS</acronym> firmware you are running.</p><span id=
       "index-emacspeak_002dzap_002ddtk"></span> <span id=
