--- a/manual/emacspeak_002dpackage.html
+++ b/manual/emacspeak_002dpackage.html
@@ -122,8 +122,8 @@
     Option</strong> <em>voice-package-description</em></dt>
     <dd>
       <p>Personality used for package-description This personality
-      uses voice-monotone whose effect can be changed globally by
-      customizing voice-monotone-settings.</p>
+      uses voice-lighten whose effect can be changed globally by
+      customizing voice-lighten-settings.</p>
     </dd>
   </dl>
   <dl>
