--- a/manual/dtk_002dspeak.html
+++ b/manual/dtk_002dspeak.html
@@ -114,8 +114,20 @@ will say ‘‘aw fifteen dot’’ when speaking the string
 </pre>
       </div>
     </dd>
+  </dl><span id="dtk_002dlist_002dlanguages"></span>
+  <h4 class="subsubsection">12.7.1.3 dtk-list-languages</h4>
+  <dl>
+    <dt id="index-dtk_002dlist_002dlanguages">Command:
+    <strong>dtk-list-languages</strong></dt>
+    <dd>
+      <span id="index-dtk_002dlist_002dlanguages-1"></span>
+      <div class="format">
+        <pre class="format">Say the available languages.
+</pre>
+      </div>
+    </dd>
   </dl><span id="dtk_002dlocal_002dserver"></span>
-  <h4 class="subsubsection">12.7.1.3 dtk-local-server</h4>
+  <h4 class="subsubsection">12.7.1.4 dtk-local-server</h4>
   <dl>
     <dt id="index-dtk_002dlocal_002dserver">Command:
     <strong>dtk-local-server</strong> <em>(program &amp;optional
@@ -139,7 +151,7 @@ program. Port defaults to dtk-local-server-port
       </div>
     </dd>
   </dl><span id="dtk_002dnotify_002dinitialize"></span>
-  <h4 class="subsubsection">12.7.1.4 dtk-notify-initialize</h4>
+  <h4 class="subsubsection">12.7.1.5 dtk-notify-initialize</h4>
   <dl>
     <dt id="index-dtk_002dnotify_002dinitialize">Command:
     <strong>dtk-notify-initialize</strong></dt>
@@ -156,7 +168,7 @@ program. Port defaults to dtk-local-server-port
       </div>
     </dd>
   </dl><span id="dtk_002dnotify_002dshutdown"></span>
-  <h4 class="subsubsection">12.7.1.5 dtk-notify-shutdown</h4>
+  <h4 class="subsubsection">12.7.1.6 dtk-notify-shutdown</h4>
   <dl>
     <dt id="index-dtk_002dnotify_002dshutdown">Command:
     <strong>dtk-notify-shutdown</strong></dt>
@@ -173,7 +185,7 @@ program. Port defaults to dtk-local-server-port
       </div>
     </dd>
   </dl><span id="dtk_002dnotify_002dstop"></span>
-  <h4 class="subsubsection">12.7.1.6 dtk-notify-stop</h4>
+  <h4 class="subsubsection">12.7.1.7 dtk-notify-stop</h4>
   <dl>
     <dt id="index-dtk_002dnotify_002dstop">Command:
     <strong>dtk-notify-stop</strong></dt>
@@ -190,7 +202,7 @@ program. Port defaults to dtk-local-server-port
       </div>
     </dd>
   </dl><span id="dtk_002dreset_002dstate"></span>
-  <h4 class="subsubsection">12.7.1.7 dtk-reset-state</h4>
+  <h4 class="subsubsection">12.7.1.8 dtk-reset-state</h4>
   <dl>
     <dt id="index-dtk_002dreset_002dstate">Command:
     <strong>dtk-reset-state</strong></dt>
@@ -208,7 +220,7 @@ Typically used after the Dectalk has been power   cycled.
       </div>
     </dd>
   </dl><span id="dtk_002dselect_002dserver"></span>
-  <h4 class="subsubsection">12.7.1.8 dtk-select-server</h4>
+  <h4 class="subsubsection">12.7.1.9 dtk-select-server</h4>
   <dl>
     <dt id="index-dtk_002dselect_002dserver-1">Command:
     <strong>dtk-select-server</strong> <em>(program &amp;optional
@@ -232,7 +244,7 @@ ALSA_DEFAULT to specified device before starting the server.
       </div>
     </dd>
   </dl><span id="dtk_002dset_002dcharacter_002dscale"></span>
-  <h4 class="subsubsection">12.7.1.9 dtk-set-character-scale</h4>
+  <h4 class="subsubsection">12.7.1.10 dtk-set-character-scale</h4>
   <dl>
     <dt id="index-dtk_002dset_002dcharacter_002dscale-1">Command:
     <strong>dtk-set-character-scale</strong> <em>(factor
@@ -258,7 +270,7 @@ current local  value to the result.
     </dd>
   </dl><span id=
   "dtk_002dset_002dchunk_002dseparator_002dsyntax"></span>
-  <h4 class="subsubsection">12.7.1.10
+  <h4 class="subsubsection">12.7.1.11
   dtk-set-chunk-separator-syntax</h4>
   <dl>
     <dt id=
@@ -285,7 +297,7 @@ Argument S specifies the syntax class.
       </div>
     </dd>
   </dl><span id="dtk_002dset_002dlanguage"></span>
-  <h4 class="subsubsection">12.7.1.11 dtk-set-language</h4>
+  <h4 class="subsubsection">12.7.1.12 dtk-set-language</h4>
   <dl>
     <dt id="index-dtk_002dset_002dlanguage">Command:
     <strong>dtk-set-language</strong> <em>(lang)</em></dt>
@@ -305,7 +317,7 @@ Argument S specifies the syntax class.
       </div>
     </dd>
   </dl><span id="dtk_002dset_002dnext_002dlanguage"></span>
-  <h4 class="subsubsection">12.7.1.12 dtk-set-next-language</h4>
+  <h4 class="subsubsection">12.7.1.13 dtk-set-next-language</h4>
   <dl>
     <dt id="index-dtk_002dset_002dnext_002dlanguage">Command:
     <strong>dtk-set-next-language</strong></dt>
@@ -324,7 +336,7 @@ Argument S specifies the syntax class.
     </dd>
   </dl><span id=
   "dtk_002dset_002dpredefined_002dspeech_002drate"></span>
-  <h4 class="subsubsection">12.7.1.13
+  <h4 class="subsubsection">12.7.1.14
   dtk-set-predefined-speech-rate</h4>
   <dl>
     <dt id=
@@ -387,7 +399,7 @@ rate = dtk-speech-rate-base + dtk-speech-rate-step * level.
       </div>
     </dd>
   </dl><span id="dtk_002dset_002dpreferred_002dlanguage"></span>
-  <h4 class="subsubsection">12.7.1.14
+  <h4 class="subsubsection">12.7.1.15
   dtk-set-preferred-language</h4>
   <dl>
     <dt id="index-dtk_002dset_002dpreferred_002dlanguage">Command:
@@ -409,7 +421,7 @@ will set "en_GB".
       </div>
     </dd>
   </dl><span id="dtk_002dset_002dprevious_002dlanguage"></span>
-  <h4 class="subsubsection">12.7.1.15
+  <h4 class="subsubsection">12.7.1.16
   dtk-set-previous-language</h4>
   <dl>
     <dt id="index-dtk_002dset_002dprevious_002dlanguage">Command:
@@ -429,7 +441,7 @@ will set "en_GB".
       </div>
     </dd>
   </dl><span id="dtk_002dset_002dpunctuations"></span>
-  <h4 class="subsubsection">12.7.1.16 dtk-set-punctuations</h4>
+  <h4 class="subsubsection">12.7.1.17 dtk-set-punctuations</h4>
   <dl>
     <dt id="index-dtk_002dset_002dpunctuations-1">Command:
     <strong>dtk-set-punctuations</strong> <em>(mode &amp;optional
@@ -453,7 +465,7 @@ current local  value to the result.
     </dd>
   </dl><span id=
   "dtk_002dset_002dpunctuations_002dto_002dall"></span>
-  <h4 class="subsubsection">12.7.1.17
+  <h4 class="subsubsection">12.7.1.18
   dtk-set-punctuations-to-all</h4>
   <dl>
     <dt id="index-dtk_002dset_002dpunctuations_002dto_002dall">
@@ -472,7 +484,7 @@ Interactive PREFIX arg sets punctuation mode globally.
     </dd>
   </dl><span id=
   "dtk_002dset_002dpunctuations_002dto_002dsome"></span>
-  <h4 class="subsubsection">12.7.1.18
+  <h4 class="subsubsection">12.7.1.19
   dtk-set-punctuations-to-some</h4>
   <dl>
     <dt id="index-dtk_002dset_002dpunctuations_002dto_002dsome">
@@ -490,7 +502,7 @@ Interactive PREFIX arg sets punctuation mode globally.
       </div>
     </dd>
   </dl><span id="dtk_002dset_002drate"></span>
-  <h4 class="subsubsection">12.7.1.19 dtk-set-rate</h4>
+  <h4 class="subsubsection">12.7.1.20 dtk-set-rate</h4>
   <dl>
     <dt id="index-dtk_002dset_002drate-1">Command:
     <strong>dtk-set-rate</strong> <em>(rate &amp;optional
@@ -512,7 +524,7 @@ current local  value to the result.
       </div>
     </dd>
   </dl><span id="dtk_002dstop"></span>
-  <h4 class="subsubsection">12.7.1.20 dtk-stop</h4>
+  <h4 class="subsubsection">12.7.1.21 dtk-stop</h4>
   <dl>
     <dt id="index-dtk_002dstop-1">Command:
     <strong>dtk-stop</strong> <em>(&amp;optional all)</em></dt>
@@ -532,7 +544,7 @@ Optional arg ‘all’ or interactive call   silences notification stream as wel
       </div>
     </dd>
   </dl><span id="dtk_002dtoggle_002dallcaps_002dbeep"></span>
-  <h4 class="subsubsection">12.7.1.21 dtk-toggle-allcaps-beep</h4>
+  <h4 class="subsubsection">12.7.1.22 dtk-toggle-allcaps-beep</h4>
   <dl>
     <dt id="index-dtk_002dtoggle_002dallcaps_002dbeep-1">Command:
     <strong>dtk-toggle-allcaps-beep</strong> <em>(&amp;optional
@@ -556,7 +568,7 @@ However it is irritating to have it on when reading documents.
       </div>
     </dd>
   </dl><span id="dtk_002dtoggle_002dcapitalization"></span>
-  <h4 class="subsubsection">12.7.1.22
+  <h4 class="subsubsection">12.7.1.23
   dtk-toggle-capitalization</h4>
   <dl>
     <dt id="index-dtk_002dtoggle_002dcapitalization-1">Command:
@@ -579,7 +591,7 @@ value, and then set the current local value to the result.
       </div>
     </dd>
   </dl><span id="dtk_002dtoggle_002dpunctuation_002dmode"></span>
-  <h4 class="subsubsection">12.7.1.23
+  <h4 class="subsubsection">12.7.1.24
   dtk-toggle-punctuation-mode</h4>
   <dl>
     <dt id="index-dtk_002dtoggle_002dpunctuation_002dmode">Command:
@@ -603,7 +615,7 @@ Interactive PREFIX arg makes the new setting global.
       </div>
     </dd>
   </dl><span id="dtk_002dtoggle_002dquiet"></span>
-  <h4 class="subsubsection">12.7.1.24 dtk-toggle-quiet</h4>
+  <h4 class="subsubsection">12.7.1.25 dtk-toggle-quiet</h4>
   <dl>
     <dt id="index-dtk_002dtoggle_002dquiet-1">Command:
     <strong>dtk-toggle-quiet</strong> <em>(&amp;optional
@@ -619,7 +631,7 @@ Optional interactive prefix arg causes this setting to become global.
     </dd>
   </dl><span id=
   "dtk_002dtoggle_002dspeak_002dnonprinting_002dchars"></span>
-  <h4 class="subsubsection">12.7.1.25
+  <h4 class="subsubsection">12.7.1.26
   dtk-toggle-speak-nonprinting-chars</h4>
   <dl>
     <dt id=
@@ -643,7 +655,7 @@ value, and then set the current local value to the result.
       </div>
     </dd>
   </dl><span id="dtk_002dtoggle_002dsplit_002dcaps"></span>
-  <h4 class="subsubsection">12.7.1.26 dtk-toggle-split-caps</h4>
+  <h4 class="subsubsection">12.7.1.27 dtk-toggle-split-caps</h4>
   <dl>
     <dt id="index-dtk_002dtoggle_002dsplit_002dcaps-1">Command:
     <strong>dtk-toggle-split-caps</strong> <em>(&amp;optional
@@ -667,7 +679,7 @@ value to the result.
     </dd>
   </dl><span id=
   "dtk_002dtoggle_002dsplitting_002don_002dwhite_002dspace"></span>
-  <h4 class="subsubsection">12.7.1.27
+  <h4 class="subsubsection">12.7.1.28
   dtk-toggle-splitting-on-white-space</h4>
   <dl>
     <dt id=
@@ -701,7 +713,7 @@ since the synthesizer is getting a word at a time.
       </div>
     </dd>
   </dl><span id="dtk_002dtoggle_002dstrip_002doctals"></span>
-  <h4 class="subsubsection">12.7.1.28 dtk-toggle-strip-octals</h4>
+  <h4 class="subsubsection">12.7.1.29 dtk-toggle-strip-octals</h4>
   <dl>
     <dt id="index-dtk_002dtoggle_002dstrip_002doctals">Command:
     <strong>dtk-toggle-strip-octals</strong> <em>(&amp;optional
@@ -723,7 +735,7 @@ value to the result.
       </div>
     </dd>
   </dl><span id="tts_002dcycle_002ddevice"></span>
-  <h4 class="subsubsection">12.7.1.29 tts-cycle-device</h4>
+  <h4 class="subsubsection">12.7.1.30 tts-cycle-device</h4>
   <dl>
     <dt id="index-tts_002dcycle_002ddevice">Command:
     <strong>tts-cycle-device</strong> <em>(&amp;optional
@@ -739,7 +751,7 @@ Optional interactive prefix arg restarts current TTS server.
       </div>
     </dd>
   </dl><span id="tts_002drestart"></span>
-  <h4 class="subsubsection">12.7.1.30 tts-restart</h4>
+  <h4 class="subsubsection">12.7.1.31 tts-restart</h4>
   <dl>
     <dt id="index-tts_002drestart">Command:
     <strong>tts-restart</strong></dt>
@@ -757,12 +769,12 @@ Optional interactive prefix arg restarts current TTS server.
       </div>
     </dd>
   </dl><span id="tts_002dspeak_002dversion"></span>
-  <h4 class="subsubsection">12.7.1.31 tts-speak-version</h4>
+  <h4 class="subsubsection">12.7.1.32 tts-speak-version</h4>
   <dl>
-    <dt id="index-tts_002dspeak_002dversion">Command:
+    <dt id="index-tts_002dspeak_002dversion-1">Command:
     <strong>tts-speak-version</strong></dt>
     <dd>
-      <span id="index-tts_002dspeak_002dversion-1"></span>
+      <span id="index-tts_002dspeak_002dversion-2"></span>
       <div class="format">
         <pre class="format">Speak version.
 </pre>
