--- a/manual/index.html
+++ b/manual/index.html
@@ -561,36 +561,40 @@
                   <li><a id="toc-dtk_002dcloud" href=
                   "dtk_002dspeak.html#dtk_002dcloud" name=
                   "toc-dtk_002dcloud">12.7.1.2 dtk-cloud</a></li>
+                  <li><a id="toc-dtk_002dlist_002dlanguages" href=
+                  "dtk_002dspeak.html#dtk_002dlist_002dlanguages"
+                  name="toc-dtk_002dlist_002dlanguages">12.7.1.3
+                  dtk-list-languages</a></li>
                   <li><a id="toc-dtk_002dlocal_002dserver" href=
                   "dtk_002dspeak.html#dtk_002dlocal_002dserver"
-                  name="toc-dtk_002dlocal_002dserver">12.7.1.3
+                  name="toc-dtk_002dlocal_002dserver">12.7.1.4
                   dtk-local-server</a></li>
                   <li><a id="toc-dtk_002dnotify_002dinitialize"
                   href=
                   "dtk_002dspeak.html#dtk_002dnotify_002dinitialize"
-                  name="toc-dtk_002dnotify_002dinitialize">12.7.1.4
+                  name="toc-dtk_002dnotify_002dinitialize">12.7.1.5
                   dtk-notify-initialize</a></li>
                   <li><a id="toc-dtk_002dnotify_002dshutdown" href=
                   "dtk_002dspeak.html#dtk_002dnotify_002dshutdown"
-                  name="toc-dtk_002dnotify_002dshutdown">12.7.1.5
+                  name="toc-dtk_002dnotify_002dshutdown">12.7.1.6
                   dtk-notify-shutdown</a></li>
                   <li><a id="toc-dtk_002dnotify_002dstop" href=
                   "dtk_002dspeak.html#dtk_002dnotify_002dstop"
-                  name="toc-dtk_002dnotify_002dstop">12.7.1.6
+                  name="toc-dtk_002dnotify_002dstop">12.7.1.7
                   dtk-notify-stop</a></li>
                   <li><a id="toc-dtk_002dreset_002dstate" href=
                   "dtk_002dspeak.html#dtk_002dreset_002dstate"
-                  name="toc-dtk_002dreset_002dstate">12.7.1.7
+                  name="toc-dtk_002dreset_002dstate">12.7.1.8
                   dtk-reset-state</a></li>
                   <li><a id="toc-dtk_002dselect_002dserver" href=
                   "dtk_002dspeak.html#dtk_002dselect_002dserver"
-                  name="toc-dtk_002dselect_002dserver">12.7.1.8
+                  name="toc-dtk_002dselect_002dserver">12.7.1.9
                   dtk-select-server</a></li>
                   <li><a id=
                   "toc-dtk_002dset_002dcharacter_002dscale" href=
                   "dtk_002dspeak.html#dtk_002dset_002dcharacter_002dscale"
                   name=
-                  "toc-dtk_002dset_002dcharacter_002dscale">12.7.1.9
+                  "toc-dtk_002dset_002dcharacter_002dscale">12.7.1.10
                   dtk-set-character-scale</a></li>
                   <li><a id=
                   "toc-dtk_002dset_002dchunk_002dseparator_002dsyntax"
@@ -598,16 +602,16 @@
                   "dtk_002dspeak.html#dtk_002dset_002dchunk_002dseparator_002dsyntax"
                   name=
                   "toc-dtk_002dset_002dchunk_002dseparator_002dsyntax">
-                  12.7.1.10 dtk-set-chunk-separator-syntax</a></li>
+                  12.7.1.11 dtk-set-chunk-separator-syntax</a></li>
                   <li><a id="toc-dtk_002dset_002dlanguage" href=
                   "dtk_002dspeak.html#dtk_002dset_002dlanguage"
-                  name="toc-dtk_002dset_002dlanguage">12.7.1.11
+                  name="toc-dtk_002dset_002dlanguage">12.7.1.12
                   dtk-set-language</a></li>
                   <li><a id="toc-dtk_002dset_002dnext_002dlanguage"
                   href=
                   "dtk_002dspeak.html#dtk_002dset_002dnext_002dlanguage"
                   name=
-                  "toc-dtk_002dset_002dnext_002dlanguage">12.7.1.12
+                  "toc-dtk_002dset_002dnext_002dlanguage">12.7.1.13
                   dtk-set-next-language</a></li>
                   <li><a id=
                   "toc-dtk_002dset_002dpredefined_002dspeech_002drate"
@@ -615,22 +619,22 @@
                   "dtk_002dspeak.html#dtk_002dset_002dpredefined_002dspeech_002drate"
                   name=
                   "toc-dtk_002dset_002dpredefined_002dspeech_002drate">
-                  12.7.1.13 dtk-set-predefined-speech-rate</a></li>
+                  12.7.1.14 dtk-set-predefined-speech-rate</a></li>
                   <li><a id=
                   "toc-dtk_002dset_002dpreferred_002dlanguage"
                   href="dtk_002dspeak.html#dtk_002dset_002dpreferred_002dlanguage"
                   name=
-                  "toc-dtk_002dset_002dpreferred_002dlanguage">12.7.1.14
+                  "toc-dtk_002dset_002dpreferred_002dlanguage">12.7.1.15
                   dtk-set-preferred-language</a></li>
                   <li><a id=
                   "toc-dtk_002dset_002dprevious_002dlanguage" href=
                   "dtk_002dspeak.html#dtk_002dset_002dprevious_002dlanguage"
                   name=
-                  "toc-dtk_002dset_002dprevious_002dlanguage">12.7.1.15
+                  "toc-dtk_002dset_002dprevious_002dlanguage">12.7.1.16
                   dtk-set-previous-language</a></li>
                   <li><a id="toc-dtk_002dset_002dpunctuations"
                   href="dtk_002dspeak.html#dtk_002dset_002dpunctuations"
-                  name="toc-dtk_002dset_002dpunctuations">12.7.1.16
+                  name="toc-dtk_002dset_002dpunctuations">12.7.1.17
                   dtk-set-punctuations</a></li>
                   <li><a id=
                   "toc-dtk_002dset_002dpunctuations_002dto_002dall"
@@ -638,43 +642,43 @@
                   "dtk_002dspeak.html#dtk_002dset_002dpunctuations_002dto_002dall"
                   name=
                   "toc-dtk_002dset_002dpunctuations_002dto_002dall">
-                  12.7.1.17 dtk-set-punctuations-to-all</a></li>
+                  12.7.1.18 dtk-set-punctuations-to-all</a></li>
                   <li><a id=
                   "toc-dtk_002dset_002dpunctuations_002dto_002dsome"
                   href=
                   "dtk_002dspeak.html#dtk_002dset_002dpunctuations_002dto_002dsome"
                   name=
                   "toc-dtk_002dset_002dpunctuations_002dto_002dsome">
-                  12.7.1.18 dtk-set-punctuations-to-some</a></li>
+                  12.7.1.19 dtk-set-punctuations-to-some</a></li>
                   <li><a id="toc-dtk_002dset_002drate" href=
                   "dtk_002dspeak.html#dtk_002dset_002drate" name=
-                  "toc-dtk_002dset_002drate">12.7.1.19
+                  "toc-dtk_002dset_002drate">12.7.1.20
                   dtk-set-rate</a></li>
                   <li><a id="toc-dtk_002dstop" href=
                   "dtk_002dspeak.html#dtk_002dstop" name=
-                  "toc-dtk_002dstop">12.7.1.20 dtk-stop</a></li>
+                  "toc-dtk_002dstop">12.7.1.21 dtk-stop</a></li>
                   <li><a id=
                   "toc-dtk_002dtoggle_002dallcaps_002dbeep" href=
                   "dtk_002dspeak.html#dtk_002dtoggle_002dallcaps_002dbeep"
                   name=
-                  "toc-dtk_002dtoggle_002dallcaps_002dbeep">12.7.1.21
+                  "toc-dtk_002dtoggle_002dallcaps_002dbeep">12.7.1.22
                   dtk-toggle-allcaps-beep</a></li>
                   <li><a id="toc-dtk_002dtoggle_002dcapitalization"
                   href=
                   "dtk_002dspeak.html#dtk_002dtoggle_002dcapitalization"
                   name=
-                  "toc-dtk_002dtoggle_002dcapitalization">12.7.1.22
+                  "toc-dtk_002dtoggle_002dcapitalization">12.7.1.23
                   dtk-toggle-capitalization</a></li>
                   <li><a id=
                   "toc-dtk_002dtoggle_002dpunctuation_002dmode"
                   href=
                   "dtk_002dspeak.html#dtk_002dtoggle_002dpunctuation_002dmode"
                   name=
-                  "toc-dtk_002dtoggle_002dpunctuation_002dmode">12.7.1.23
+                  "toc-dtk_002dtoggle_002dpunctuation_002dmode">12.7.1.24
                   dtk-toggle-punctuation-mode</a></li>
                   <li><a id="toc-dtk_002dtoggle_002dquiet" href=
                   "dtk_002dspeak.html#dtk_002dtoggle_002dquiet"
-                  name="toc-dtk_002dtoggle_002dquiet">12.7.1.24
+                  name="toc-dtk_002dtoggle_002dquiet">12.7.1.25
                   dtk-toggle-quiet</a></li>
                   <li><a id=
                   "toc-dtk_002dtoggle_002dspeak_002dnonprinting_002dchars"
@@ -682,13 +686,13 @@
                   "dtk_002dspeak.html#dtk_002dtoggle_002dspeak_002dnonprinting_002dchars"
                   name=
                   "toc-dtk_002dtoggle_002dspeak_002dnonprinting_002dchars">
-                  12.7.1.25
+                  12.7.1.26
                   dtk-toggle-speak-nonprinting-chars</a></li>
                   <li><a id="toc-dtk_002dtoggle_002dsplit_002dcaps"
                   href=
                   "dtk_002dspeak.html#dtk_002dtoggle_002dsplit_002dcaps"
                   name=
-                  "toc-dtk_002dtoggle_002dsplit_002dcaps">12.7.1.26
+                  "toc-dtk_002dtoggle_002dsplit_002dcaps">12.7.1.27
                   dtk-toggle-split-caps</a></li>
                   <li><a id=
                   "toc-dtk_002dtoggle_002dsplitting_002don_002dwhite_002dspace"
@@ -696,25 +700,25 @@
                   "dtk_002dspeak.html#dtk_002dtoggle_002dsplitting_002don_002dwhite_002dspace"
                   name=
                   "toc-dtk_002dtoggle_002dsplitting_002don_002dwhite_002dspace">
-                  12.7.1.27
+                  12.7.1.28
                   dtk-toggle-splitting-on-white-space</a></li>
                   <li><a id=
                   "toc-dtk_002dtoggle_002dstrip_002doctals" href=
                   "dtk_002dspeak.html#dtk_002dtoggle_002dstrip_002doctals"
                   name=
-                  "toc-dtk_002dtoggle_002dstrip_002doctals">12.7.1.28
+                  "toc-dtk_002dtoggle_002dstrip_002doctals">12.7.1.29
                   dtk-toggle-strip-octals</a></li>
                   <li><a id="toc-tts_002dcycle_002ddevice" href=
                   "dtk_002dspeak.html#tts_002dcycle_002ddevice"
-                  name="toc-tts_002dcycle_002ddevice">12.7.1.29
+                  name="toc-tts_002dcycle_002ddevice">12.7.1.30
                   tts-cycle-device</a></li>
                   <li><a id="toc-tts_002drestart" href=
                   "dtk_002dspeak.html#tts_002drestart" name=
-                  "toc-tts_002drestart">12.7.1.30
+                  "toc-tts_002drestart">12.7.1.31
                   tts-restart</a></li>
                   <li><a id="toc-tts_002dspeak_002dversion" href=
                   "dtk_002dspeak.html#tts_002dspeak_002dversion"
-                  name="toc-tts_002dspeak_002dversion">12.7.1.31
+                  name="toc-tts_002dspeak_002dversion">12.7.1.32
                   tts-speak-version</a></li>
                 </ul>
               </li>
