--- a/announcements/gnus-gmail-search.html
+++ b/announcements/gnus-gmail-search.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2020-09-08 Tue 14:10 -->
+<!-- 2020-09-08 Tue 14:42 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Using GMail Search Operators In GNUS</title>
@@ -243,8 +243,8 @@ for the JavaScript code in this tag.
 <body>
 <div id="content">
 <h1 class="title">Using GMail Search Operators In GNUS</h1>
-<div id="outline-container-org4fe795e" class="outline-2">
-<h2 id="org4fe795e"><span class="section-number-2">1</span> Executive Summary</h2>
+<div id="outline-container-orge8cfa33" class="outline-2">
+<h2 id="orge8cfa33"><span class="section-number-2">1</span> Executive Summary</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 I have been using the following to search GMail from GNUS for over 8
@@ -259,14 +259,99 @@ above.
 </div>
 </div>
 
-<div id="outline-container-orga72f63d" class="outline-2">
-<h2 id="orga72f63d"><span class="section-number-2">2</span> Background</h2>
+<div id="outline-container-orgd66056d" class="outline-2">
+<h2 id="orgd66056d"><span class="section-number-2">2</span> Background</h2>
 <div class="outline-text-2" id="text-2">
 <p>
 You can read email with GNUS, and many people read GMail with GNUS,
-the details of GMail setup with GNUS wont fit this margin.  For my own
+however, the details of GMail setup with GNUS wont fit this margin.  For my own
 GMail setup using Ceasar's excellent <span class="underline">auth-xoauth2</span> package, see file
 <a href="https://github.com/tvraman/emacspeak/blob/master/tvr/gnus-gmail-prepare.el">gnus-gmail-prepare.el</a>.
+</p>
+</div>
+</div>
+
+<div id="outline-container-orge12a225" class="outline-2">
+<h2 id="orge12a225"><span class="section-number-2">3</span> Leveraging GNUS Back-end NNIR To Search GMail</h2>
+<div class="outline-text-2" id="text-3">
+<p>
+GMail is accessed from GNUS using the imap protocol.
+The <span class="underline">imap</span> specification defines a set of standard search operators;
+GMail itself defines a  slightly different and arguably easier to use
+set of search operators. Module <span class="underline">gm-nnir</span> refered to above implements
+both the  standard IMap search operator as well as GMail's search
+operators; in practice, I have mostly only used the GMail Search
+operators in the last 8 years since implementing this module.
+</p>
+
+<p>
+Without further ado, here is the  code to enable GMail Search:
+</p>
+
+<div class="org-src-container">
+<pre class="src src-emacs-lisp">(defun gm-nnir-group-make-gmail-group (query)
+  "Use GMail search syntax.
+See https://support.google.com/mail/answer/7190?hl=en for syntax. "
+  (interactive "sGMail Query: ")  
+  (let ((nnir-imap-default-search-key "imap")
+        (q (format "X-GM-RAW \"%s\"" query)))
+    (cond
+     ((gnus-group-group-name)           ; Search current group
+      (gnus-group-make-nnir-group
+       nil                              ; no extra params needed
+       `(nnir-specs (nnir-query-spec (query ,q)))))
+     (t (error "Not on a group.")))))
+</pre>
+</div>
+
+<p>
+I bind the above to <span class="underline">/</span> by using
+</p>
+<div class="org-src-container">
+<pre class="src src-emacs-lisp">(define-key gnus-group-mode-map "/" 'gm-nnir-group-make-gmail-group)
+</pre>
+</div>
+</div>
+</div>
+
+
+
+
+<div id="outline-container-orgc0ad4ed" class="outline-2">
+<h2 id="orgc0ad4ed"><span class="section-number-2">4</span> Example Of Use</h2>
+<div class="outline-text-2" id="text-4">
+<p>
+I am subscribed to list <span class="underline">emacs-devel@gnu.org</span> and email sent to that
+list gets GMail Label <code>emacs-devel</code>. In Gnus, I open that label as
+group <code>emacs-devel@gnu.org</code>. Typing <span class="underline">/</span> on the group line and entering
+</p>
+<pre class="example">
+from:rms after:2020/09/01
+</pre>
+
+<p>
+in the minibuffer results in the following:
+</p>
+
+<pre class="example">
+1.1 Re: Good first issues to contribute Richard Stallman 05-Sep [5.3k]
+2.1 Lars Ingebrigtsen is now one of the Emacs maintainers Richard Stallman 06-Sep [4.9k]
+3.1 Re: A new user perspective about "Changes for emacs 28" Richard Stallman 07-Sep [5.5k]
+4.5 Re: Changes for emacs 28 Richard Stallman 07-Sep [5.3k]
+5.1  Richard Stallman 07-Sep &lt;6.2k&gt;
+6.1  Richard Stallman 07-Sep &lt;6.0k&gt;
+7.1  Richard Stallman 07-Sep &lt;5.5k&gt;
+8.1  Richard Stallman 07-Sep &lt;5.7k&gt;
+
+</pre>
+
+
+
+
+<p>
+The search above creates an ephemeral group with matching messages
+appearing as shown above, you can read messages, reply to them and do
+anything else that you might ordinarily do within the GNUS interface.
 </p>
 </div>
 </div>
@@ -274,7 +359,7 @@ GMail setup using Ceasar's excellent <span class="underline">auth-xoauth2</span>
 <div id="postamble" class="status">
 <p class="date">Date: 2020-09-08 Tue 00:00</p>
 <p class="author">Author: T.V Raman</p>
-<p class="date">Created: 2020-09-08 Tue 14:10</p>
+<p class="date">Created: 2020-09-08 Tue 14:42</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
