esr: background task

--- a/announcements/gnus-gmail-search.html
+++ b/announcements/gnus-gmail-search.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2020-09-08 Tue 14:42 -->
+<!-- 2020-09-08 Tue 16:19 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Using GMail Search Operators In GNUS</title>
@@ -243,8 +243,8 @@ for the JavaScript code in this tag.
 <body>
 <div id="content">
 <h1 class="title">Using GMail Search Operators In GNUS</h1>
-<div id="outline-container-orge8cfa33" class="outline-2">
-<h2 id="orge8cfa33"><span class="section-number-2">1</span> Executive Summary</h2>
+<div id="outline-container-org551bed2" class="outline-2">
+<h2 id="org551bed2"><span class="section-number-2">1</span> Executive Summary</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 I have been using the following to search GMail from GNUS for over 8
@@ -259,8 +259,8 @@ above.
 </div>
 </div>
 
-<div id="outline-container-orgd66056d" class="outline-2">
-<h2 id="orgd66056d"><span class="section-number-2">2</span> Background</h2>
+<div id="outline-container-org77c15d3" class="outline-2">
+<h2 id="org77c15d3"><span class="section-number-2">2</span> Background</h2>
 <div class="outline-text-2" id="text-2">
 <p>
 You can read email with GNUS, and many people read GMail with GNUS,
@@ -271,17 +271,18 @@ GMail setup using Ceasar's excellent <span class="underline">auth-xoauth2</span>
 </div>
 </div>
 
-<div id="outline-container-orge12a225" class="outline-2">
-<h2 id="orge12a225"><span class="section-number-2">3</span> Leveraging GNUS Back-end NNIR To Search GMail</h2>
+<div id="outline-container-org742fc31" class="outline-2">
+<h2 id="org742fc31"><span class="section-number-2">3</span> Leveraging GNUS Back-end NNIR To Search GMail</h2>
 <div class="outline-text-2" id="text-3">
 <p>
-GMail is accessed from GNUS using the imap protocol.
-The <span class="underline">imap</span> specification defines a set of standard search operators;
-GMail itself defines a  slightly different and arguably easier to use
-set of search operators. Module <span class="underline">gm-nnir</span> refered to above implements
-both the  standard IMap search operator as well as GMail's search
-operators; in practice, I have mostly only used the GMail Search
-operators in the last 8 years since implementing this module.
+GMail is accessed from GNUS using the imap protocol.  The <span class="underline">imap</span>
+specification defines a set of standard search operators; GMail itself
+defines a slightly different and arguably easier to use set of search
+operators. Module
+<a href="https://github.com/tvraman/emacspeak/blob/master/lisp/g-client/gm-nnir.el">gm-nnir</a>
+himplements both the standard IMap search operator as well as GMail's
+search operators; in practice, I have mostly only used the GMail
+Search operators in the last 8 years since implementing this module.
 </p>
 
 <p>
@@ -317,8 +318,8 @@ I bind the above to <span class="underline">/</span> by using
 
 
 
-<div id="outline-container-orgc0ad4ed" class="outline-2">
-<h2 id="orgc0ad4ed"><span class="section-number-2">4</span> Example Of Use</h2>
+<div id="outline-container-org3464a1f" class="outline-2">
+<h2 id="org3464a1f"><span class="section-number-2">4</span> Example Of Use</h2>
 <div class="outline-text-2" id="text-4">
 <p>
 I am subscribed to list <span class="underline">emacs-devel@gnu.org</span> and email sent to that
@@ -359,7 +360,7 @@ anything else that you might ordinarily do within the GNUS interface.
 <div id="postamble" class="status">
 <p class="date">Date: 2020-09-08 Tue 00:00</p>
 <p class="author">Author: T.V Raman</p>
-<p class="date">Created: 2020-09-08 Tue 14:42</p>
+<p class="date">Created: 2020-09-08 Tue 16:19</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
