--- a/applications.html
+++ b/applications.html
@@ -18,7 +18,7 @@
 <h2>Application Categories</h2>
 <p>
       As of the last update, there are a total of
-      <em>206</em>
+      <em>205</em>
       speech-enabled applications 
       in <em>15</em> categories
       on the Emacspeak audio desktop.
@@ -52,7 +52,7 @@
             (3)
           </a></li>
 <li><a href="#Multimedia">MULTIMEDIA 
-            (16)
+            (15)
           </a></li>
 <li><a href="#Authoring">AUTHORING 
             (15)
@@ -695,7 +695,7 @@
     keystrokes.</td>
 </tr>
 <tr><td colspan="3"><h2><a name="Multimedia" id="Multimedia">MULTIMEDIA     
-          (16)
+          (15)
       </a></h2></td></tr>
 <tr>
 <td>1</td>
@@ -785,19 +785,12 @@
 </tr>
 <tr>
 <td>13</td>
-<td><a id="npr">npr</a></td>
-<td>
-      API  client for listening to NPR programs.
-    </td>
-</tr>
-<tr>
-<td>14</td>
 <td><a id="librivox">librivox</a></td>
 <td>
     API  client for listening to free Librivox audio books.</td>
 </tr>
 <tr>
-<td>15</td>
+<td>14</td>
 <td><a id="emms">emms</a></td>
 <td>
       Emacs equivalent  of XMMS --- a versatile multimedia tool.
@@ -805,7 +798,7 @@
     </td>
 </tr>
 <tr>
-<td>16</td>
+<td>15</td>
 <td><a id="midge">midge</a></td>
 <td>
     Compose and play MIDI files.</td>
@@ -1339,13 +1332,20 @@ module emacspeak-vdiff.</td>
 </tr>
 <tr>
 <td>7</td>
+<td><a id="rust">rust</a></td>
+<td>
+      Speech-enable a suite of modules  that provide an IDE for rust
+      development --- <em>rust-mode</em>, <em>rustic</em> and <em>racer</em>.</td>
+</tr>
+<tr>
+<td>8</td>
 <td><a id="cider">cider</a></td>
 <td>
       A powerful IDE for Clojure development.
     </td>
 </tr>
 <tr>
-<td>8</td>
+<td>9</td>
 <td><a id="slime">slime</a></td>
 <td>
       Superior Lisp Interaction mode for Emacs --- a powerful IDE for
@@ -1353,7 +1353,7 @@ module emacspeak-vdiff.</td>
     </td>
 </tr>
 <tr>
-<td>9</td>
+<td>10</td>
 <td><a id="jdee">jdee</a></td>
 <td>
       Java Development Environment with interactive debugging
@@ -1362,14 +1362,14 @@ module emacspeak-vdiff.</td>
     </td>
 </tr>
 <tr>
-<td>10</td>
+<td>11</td>
 <td><a id="cedet">cedet</a></td>
 <td>
       Integrated Emacs Development Environment
     </td>
 </tr>
 <tr>
-<td>11</td>
+<td>12</td>
 <td><a id="ecb">ecb</a></td>
 <td>
       Emacs Class Browser with support for Java, C++, C
@@ -1379,7 +1379,7 @@ module emacspeak-vdiff.</td>
     </td>
 </tr>
 <tr>
-<td>12</td>
+<td>13</td>
 <td><a id="gud">gud</a></td>
 <td>
       Unified debugger front-end.
@@ -1387,7 +1387,7 @@ module emacspeak-vdiff.</td>
     </td>
 </tr>
 <tr>
-<td>13</td>
+<td>14</td>
 <td><a id="c">c</a></td>
 <td>
       Editting support for C, C++  and related languages with full aural
@@ -1397,7 +1397,7 @@ module emacspeak-vdiff.</td>
     </td>
 </tr>
 <tr>
-<td>14</td>
+<td>15</td>
 <td><a id="compile">compile</a></td>
 <td>
       Front-end to running batch compiles.
@@ -1405,7 +1405,7 @@ module emacspeak-vdiff.</td>
     </td>
 </tr>
 <tr>
-<td>15</td>
+<td>16</td>
 <td><a id="perl">perl</a></td>
 <td>
       Editting support for Perl.
@@ -1414,7 +1414,7 @@ module emacspeak-vdiff.</td>
     </td>
 </tr>
 <tr>
-<td>16</td>
+<td>17</td>
 <td><a id="ruby">ruby</a></td>
 <td>
       Speech-enables editting support for Ruby.
@@ -1423,7 +1423,7 @@ module emacspeak-vdiff.</td>
     </td>
 </tr>
 <tr>
-<td>17</td>
+<td>18</td>
 <td><a id="lua">lua</a></td>
 <td>
       Editting support for interactive LUA  development.
@@ -1431,7 +1431,7 @@ module emacspeak-vdiff.</td>
     </td>
 </tr>
 <tr>
-<td>18</td>
+<td>19</td>
 <td><a id="Go">Go</a></td>
 <td>
       Editting support for interactive Go  development.
@@ -1439,7 +1439,7 @@ module emacspeak-vdiff.</td>
     </td>
 </tr>
 <tr>
-<td>19</td>
+<td>20</td>
 <td><a id="geiser">geiser</a></td>
 <td>
       Support for interactive Scheme development including aural
@@ -1449,7 +1449,7 @@ module emacspeak-vdiff.</td>
     </td>
 </tr>
 <tr>
-<td>20</td>
+<td>21</td>
 <td><a id="racket-mode">racket-mode</a></td>
 <td>
       Support for interactive Racket development including aural
@@ -1459,7 +1459,7 @@ module emacspeak-vdiff.</td>
     </td>
 </tr>
 <tr>
-<td>21</td>
+<td>22</td>
 <td><a id="tcl">tcl</a></td>
 <td>
       Support for interactive TCL development including aural highlighting,
@@ -1467,7 +1467,7 @@ module emacspeak-vdiff.</td>
     </td>
 </tr>
 <tr>
-<td>22</td>
+<td>23</td>
 <td><a id="python">python</a></td>
 <td>
       Editting support for interactive Python development.
@@ -1475,14 +1475,14 @@ module emacspeak-vdiff.</td>
     </td>
 </tr>
 <tr>
-<td>23</td>
+<td>24</td>
 <td><a id="elpy">elpy</a></td>
 <td>
       IDE for interactive Python development.
     </td>
 </tr>
 <tr>
-<td>24</td>
+<td>25</td>
 <td><a id="tcl">tcl</a></td>
 <td>
       Support for interactive TCL development including aural highlighting,
@@ -1490,7 +1490,7 @@ module emacspeak-vdiff.</td>
     </td>
 </tr>
 <tr>
-<td>25</td>
+<td>26</td>
 <td><a id="sql">sql</a></td>
 <td>
       support for SQL including aural highlighting and interactive
@@ -1498,7 +1498,7 @@ module emacspeak-vdiff.</td>
     </td>
 </tr>
 <tr>
-<td>26</td>
+<td>27</td>
 <td><a id="generic">generic</a></td>
 <td>
       Editting support for JavaScript and  Apache configuration files
@@ -1506,35 +1506,35 @@ module emacspeak-vdiff.</td>
     </td>
 </tr>
 <tr>
-<td>27</td>
+<td>28</td>
 <td><a id="hideshow">hideshow</a></td>
 <td>
       Hiding and showing blocks of C code.
     </td>
 </tr>
 <tr>
-<td>28</td>
+<td>29</td>
 <td><a id="make-mode">make-mode</a></td>
 <td>
       Editting support for creating and maintaining Makefiles.
     </td>
 </tr>
 <tr>
-<td>29</td>
+<td>30</td>
 <td><a id="sh-script">sh-script</a></td>
 <td>
       Editting support for shell scripts.
     </td>
 </tr>
 <tr>
-<td>30</td>
+<td>31</td>
 <td><a id="rpm-spec">rpm-spec</a></td>
 <td>
       Editting support for RPM spec files.
     </td>
 </tr>
 <tr>
-<td>31</td>
+<td>32</td>
 <td><a id="yasnippet">yasnippet</a></td>
 <td>
       Support for creating and filling-in templates using package YaSnippets.
@@ -1542,43 +1542,34 @@ module emacspeak-vdiff.</td>
     </td>
 </tr>
 <tr>
-<td>32</td>
+<td>33</td>
 <td><a id="dmacro">dmacro</a></td>
 <td>
       Dynamic macro package for template-based editting.
     </td>
 </tr>
 <tr>
-<td>33</td>
+<td>34</td>
 <td><a id="oo-browser">oo-browser</a></td>
 <td>
       Tool for browsing  object oriented software codebases
       --- this is largely obsoleted by ECB..
     </td>
 </tr>
-<applicaiton name="jss">
-      Interactive debugging of Web applications (Chrome, Firefox) via
-    the browser debugging API.</applicaiton><tr>
-<td>35</td>
-<td><a id="kite">kite</a></td>
-<td>
-      Interact with Chrome via the remote debugging API.
-    </td>
-</tr>
 <tr>
-<td>36</td>
+<td>35</td>
 <td><a id="sage-shell-mode">sage-shell-mode</a></td>
 <td>
       Speech-enable SageMath interaction.</td>
 </tr>
 <tr>
-<td>37</td>
+<td>36</td>
 <td><a id="ein">ein</a></td>
 <td>
     IPython Notebook interaction from Emacs.</td>
 </tr>
 <tr>
-<td>38</td>
+<td>37</td>
 <td><a id="smartparens">smartparens</a></td>
 <td>
 Speech-enable package smartparens for intelligently managing matching
