--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 <ul>
 <li><a href="blog">blog</a> Articles  --- including  emacspeak.blogspot.com  posts.</li>
 <li><a href="manual">manual</a> Info manual for emacspeak.</li>
-<li><a href="manual/emacspeak.pdf">Printable Book</a> Emacspeak manual as a printable PDF.</li>
+<li><a href="manual/emacspeak.pdf">Printable Book</a> Emacspeak manual
+as a printable PDF.</li>
+<li><a href="applications.html">Catalog Of Speech-Enabled Applications</a>.</li>
 <li><a href="videos">Videos</a> Video demos.</li>
 </ul>
 
